--- a/cloudcode-ios-demo/AliCloudCodeDemo/AliCloudCodeDemo/Base.lproj/Main.storyboard
+++ b/cloudcode-ios-demo/AliCloudCodeDemo/AliCloudCodeDemo/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LG4-Dx-v6U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LG4-Dx-v6U">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -78,49 +79,102 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZuS-0N-lmt">
-                                <rect key="frame" x="20" y="183" width="62" height="30"/>
+                                <rect key="frame" x="122" y="355" width="62" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="62" id="f6P-BP-eu7"/>
+                                </constraints>
                                 <state key="normal" title="展示广告"/>
                                 <connections>
                                     <action selector="startShow:" destination="vg5-uy-ZBa" eventType="touchUpInside" id="r9K-XF-2U8"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NJp-fi-edN">
-                                <rect key="frame" x="20" y="133" width="62" height="30"/>
+                                <rect key="frame" x="30" y="355" width="62" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="62" id="zW2-jl-2tg"/>
+                                    <constraint firstAttribute="width" constant="62" id="IHZ-Ap-8fc"/>
                                 </constraints>
                                 <state key="normal" title="加载广告"/>
                                 <connections>
                                     <action selector="startLoad:" destination="vg5-uy-ZBa" eventType="touchUpInside" id="SoD-n8-SYX"/>
                                 </connections>
                             </button>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="HhO-qD-x44">
-                                <rect key="frame" x="112" y="132.5" width="282" height="32"/>
-                                <segments>
-                                    <segment title="2:3"/>
-                                    <segment title="1:1"/>
-                                    <segment title="3:2"/>
-                                    <segment title="16:9"/>
-                                </segments>
-                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="宽:10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ba4-4b-lXe">
+                                <rect key="frame" x="30" y="238" width="80" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="WpV-Ds-RQo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="高:10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ON1-IY-YfU">
+                                <rect key="frame" x="30" y="299" width="80" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Nif-tE-BhC">
+                                <rect key="frame" x="123" y="294.5" width="273" height="31"/>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="vg5-uy-ZBa" eventType="valueChanged" id="9rb-oO-H0v"/>
+                                </connections>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="xSB-YC-aKz">
+                                <rect key="frame" x="118" y="233.5" width="278" height="31"/>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="vg5-uy-ZBa" eventType="valueChanged" id="Wrn-Bf-T6J"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SlotID : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v54-kw-dRH">
+                                <rect key="frame" x="30" y="167" width="59" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="59" id="4gy-fI-o1k"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="slotid" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5MA-FA-FXG">
+                                <rect key="frame" x="109" y="160.5" width="265" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ObW-cO-Rvm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="NJp-fi-edN" firstAttribute="leading" secondItem="ObW-cO-Rvm" secondAttribute="leading" constant="20" id="Bkd-df-5Pz"/>
-                            <constraint firstItem="HhO-qD-x44" firstAttribute="leading" secondItem="NJp-fi-edN" secondAttribute="trailing" constant="30" id="D6W-SR-0r4"/>
-                            <constraint firstItem="HhO-qD-x44" firstAttribute="centerY" secondItem="NJp-fi-edN" secondAttribute="centerY" id="Fmx-yq-hLi"/>
-                            <constraint firstItem="NJp-fi-edN" firstAttribute="top" secondItem="ObW-cO-Rvm" secondAttribute="top" constant="45" id="YXt-HZ-knN"/>
-                            <constraint firstItem="ZuS-0N-lmt" firstAttribute="centerX" secondItem="NJp-fi-edN" secondAttribute="centerX" id="bQV-b1-Tey"/>
-                            <constraint firstItem="ZuS-0N-lmt" firstAttribute="top" secondItem="NJp-fi-edN" secondAttribute="bottom" constant="20" id="weD-As-96Z"/>
-                            <constraint firstItem="ObW-cO-Rvm" firstAttribute="trailing" secondItem="HhO-qD-x44" secondAttribute="trailing" constant="20" id="xTM-fd-Uc8"/>
+                            <constraint firstItem="ZuS-0N-lmt" firstAttribute="centerY" secondItem="NJp-fi-edN" secondAttribute="centerY" id="2Hq-RL-wqU"/>
+                            <constraint firstItem="ON1-IY-YfU" firstAttribute="top" secondItem="Ba4-4b-lXe" secondAttribute="bottom" constant="40" id="4bi-Ki-o7C"/>
+                            <constraint firstItem="xSB-YC-aKz" firstAttribute="centerY" secondItem="Ba4-4b-lXe" secondAttribute="centerY" id="4xK-YD-XsT"/>
+                            <constraint firstItem="NJp-fi-edN" firstAttribute="leading" secondItem="ObW-cO-Rvm" secondAttribute="leading" constant="30" id="7r2-UH-c0W"/>
+                            <constraint firstItem="Nif-tE-BhC" firstAttribute="centerY" secondItem="ON1-IY-YfU" secondAttribute="centerY" id="AWH-Cb-CxD"/>
+                            <constraint firstItem="Ba4-4b-lXe" firstAttribute="leading" secondItem="ObW-cO-Rvm" secondAttribute="leading" constant="30" id="D9k-kz-tpB"/>
+                            <constraint firstItem="ObW-cO-Rvm" firstAttribute="trailing" secondItem="Nif-tE-BhC" secondAttribute="trailing" constant="20" id="DdX-ud-gxU"/>
+                            <constraint firstItem="xSB-YC-aKz" firstAttribute="leading" secondItem="Ba4-4b-lXe" secondAttribute="trailing" constant="10" id="GP9-Fb-WO5"/>
+                            <constraint firstItem="Ba4-4b-lXe" firstAttribute="top" secondItem="ObW-cO-Rvm" secondAttribute="top" constant="150" id="KUh-cM-xGf"/>
+                            <constraint firstItem="Ba4-4b-lXe" firstAttribute="leading" secondItem="v54-kw-dRH" secondAttribute="leading" id="LDN-Dh-IJ5"/>
+                            <constraint firstItem="5MA-FA-FXG" firstAttribute="centerY" secondItem="v54-kw-dRH" secondAttribute="centerY" id="LiL-eb-aq3"/>
+                            <constraint firstItem="Nif-tE-BhC" firstAttribute="leading" secondItem="ON1-IY-YfU" secondAttribute="trailing" constant="15" id="Oaw-SL-Hg4"/>
+                            <constraint firstItem="NJp-fi-edN" firstAttribute="top" secondItem="ON1-IY-YfU" secondAttribute="bottom" constant="35" id="Xsc-gm-CjL"/>
+                            <constraint firstItem="Ba4-4b-lXe" firstAttribute="top" secondItem="v54-kw-dRH" secondAttribute="bottom" constant="50" id="ZP9-j6-t8X"/>
+                            <constraint firstItem="NJp-fi-edN" firstAttribute="leading" secondItem="ON1-IY-YfU" secondAttribute="leading" id="dAc-Xf-D3R"/>
+                            <constraint firstItem="ZuS-0N-lmt" firstAttribute="leading" secondItem="NJp-fi-edN" secondAttribute="trailing" constant="30" id="g3W-st-R1A"/>
+                            <constraint firstItem="ObW-cO-Rvm" firstAttribute="trailing" secondItem="xSB-YC-aKz" secondAttribute="trailing" constant="20" id="hff-br-j8B"/>
+                            <constraint firstItem="ObW-cO-Rvm" firstAttribute="trailing" secondItem="5MA-FA-FXG" secondAttribute="trailing" constant="40" id="ksd-Kd-tyJ"/>
+                            <constraint firstItem="ON1-IY-YfU" firstAttribute="centerX" secondItem="Ba4-4b-lXe" secondAttribute="centerX" id="oDC-09-MT6"/>
+                            <constraint firstItem="ON1-IY-YfU" firstAttribute="width" secondItem="Ba4-4b-lXe" secondAttribute="width" id="oLx-ly-0Ms"/>
+                            <constraint firstItem="5MA-FA-FXG" firstAttribute="leading" secondItem="v54-kw-dRH" secondAttribute="trailing" constant="20" id="yfv-DI-QGG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="插屏" id="epZ-FG-4Ts"/>
                     <connections>
+                        <outlet property="heightLbl" destination="ON1-IY-YfU" id="yyY-ZO-od2"/>
+                        <outlet property="heightSlider" destination="Nif-tE-BhC" id="1F2-1x-sjI"/>
                         <outlet property="loadBtn" destination="NJp-fi-edN" id="ieq-1I-B7A"/>
                         <outlet property="showBtn" destination="ZuS-0N-lmt" id="hqF-te-yvA"/>
-                        <outlet property="sizeControl" destination="HhO-qD-x44" id="hHe-5d-liH"/>
+                        <outlet property="slotidTextField" destination="5MA-FA-FXG" id="wQ5-TJ-ldb"/>
+                        <outlet property="widthLbl" destination="Ba4-4b-lXe" id="EW0-Vc-YsF"/>
+                        <outlet property="widthSlider" destination="xSB-YC-aKz" id="Bor-gy-xFa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wrZ-CN-ZPe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
